# flask-api-example

./: README.md  docker-compose.yaml  pyproject.toml
app/: application.py  main.py
app/models/: user.py
docker/postgres/init/: init.sql
